--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -1,43 +1,64 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>DomoMaker</title>
+  <title>Co-Lab</title>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <link rel="shortcut icon" href="/assets/img/favicon.png"/>
   <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-  <nav><a href="/login"><img id="logo" src="/assets/img/face.png" alt="face logo"/></a>
+  <nav><a href="/login"><img id="logo" src="/assets/img/logo.png" alt="logo"/></a>
     <div class="navlink"><a href="/logout">Log out</a></div>
   </nav>
-  <section id="makeDomo">
-    <form id="domoForm" name="domoForm" action="/maker" method="POST" class="domoForm">
-      <label for="name">Name: </label>
-      <input id="domoName" type="text" name="name" placeholder="Domo Name"/>
-      <label for="age">Age: </label>
-      <input id="domoAge" type="text" name="age" placeholder="Domo Age"/>
-      <input type="hidden" name="_csrf" value={{csrfToken}} />
-      <input class="makeDomoSubmit" type="submit" value="Make Domo" />
-    </form>
+
+  <section id="tickets">
+      {{#if priorities}}
+          {{#each priorities}}
+            <div class="ticketContainer">
+                <h3>{{this.number}}</h3>
+                {{#if this.tickets}}
+                    <div class="tickets">
+                        {{#each this.tickets}}
+                            <div class="ticket">
+                                <h3 class="ticketTitle">Title: {{this.tickets.title}}</h3>
+                                <h3 class="ticketPriority">Priority: {{this.tickets.priority}}</h3>
+                                <h3 class="ticketDueDate">Due Date: {{this.tickets.dueDate}}</h3>
+                                <h3 class="ticketDesc">Description: {{this.tickets.description}}</h3>
+                            </div>
+                        {{/each}}
+                    </div>
+                {{/if}}
+            </div>
+          {{/each}}
+      {{else}}
+        <h3 class="emptyTickets">No Tickets</h3>
+      {{/if}}
+
+
   </section>
-  <section id="domos">
-    <div class="domo">
-        {{#if domos}}
-            {{#each domos}}
-                <div class="domo">
-                    <img src="/assets/img/domoface.jpeg" alt="domo face" class="domoFace"/>
-                    <h3 class="domoName">Name: {{this.name}}</h3>
-                    <h3 class="domoAge">Age: {{this.age}}</h3>
-                </div>
-            {{/each}}
-        {{else}}
-            <h3 class="emptyDomo">No Domos yet</h3>
-        {{/if}}
-    </div>
+  <section id="makeTicket">
+      <div class="ticketFormContainer">
+          <form id="ticketForm" name="ticketForm" action="/makeTicket" method="POST" class="ticketForm">
+              <label for="title">Title: </label>
+              <input id="ticketTitle" type="text" name="title" placeholder="Title"/>
+              <label for="priority">Priority: </label>
+              <input id="ticketPriority" type="text" name="priority" placeholder="Priority"/>
+              <label for="dueDate">Due Date: </label>
+              <input id="ticketDueDate" type="date" name="dueDate" placeholder="Due Date"/>
+              <label for="description">Description: </label>
+              <input id="ticketDesc" type="text" name="description" placeholder="Description"/>
+              <input type="hidden" name="_csrf" value={{csrfToken}} />
+              <input class="makeDomoSubmit" type="submit" value="Make Ticket" />
+          </form>
+      </div>
   </section>
   <div id="domoMessage"><img id="speech" src="/assets/img/speech.png" alt="speech box"/>
     <h3><span id="errorMessage"></span></h3><img id="domo" src="assets/img/domo.png" alt="domo"/>
   </div>
   <script src="/assets/bundle.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
