--- a/hosted/style.css
+++ b/hosted/style.css
@@ -16,11 +16,15 @@ html, body {
 
 nav {
     width: 100%;
-    height: 50px;
+    height: 65px;
     background-color: #FFFFFF;
     border-bottom: black solid 2px;
-    margin-bottom: 10px;
+    padding-bottom: 50px;
     position: fixed;
+}
+
+.logo{
+    margin: 10px;
 }
 
 nav:nth-child(1) {
@@ -29,11 +33,11 @@ nav:nth-child(1) {
 
 .navlink {
     float: right;
-    padding: 5px;
-    padding-top: 12px;
-    padding-left: 20px;
+    padding: 20px;
+    background-color: #00aeff;
     color: white;
     font-size: 1.3em;
+    margin: 10px;
 }
 
 .navlink a, .navlink a:link, .navlink a:visited, .navlink a:hover, .navlink a:active {
@@ -41,25 +45,19 @@ nav:nth-child(1) {
     text-decoration: none;
     padding: 5px;
     border-radius: 4px;
-    background-color: #00aeff;
     transition: background-color 0.4s ease;
-}
-
-.navlink a:hover {
-    transition: background-color 0.8s ease;
-    background-color: #66bdff;
 }
 
 .ticketContainer{
     display: inline-block;
-    width: 325px;
-    height: 700px;
+    width: 17%;
+    height: 725px;
     margin: 75px 35px 15px 15px;
 }
 
 .tickets{
     width: 350px;
-    height: 650px;
+    height: 675px;
     overflow-y: scroll;
 }
 
@@ -76,7 +74,8 @@ nav:nth-child(1) {
 }
 
 .ticketFormContainer{
-    padding-left: 400px;
+    padding-left: 200px;
+    padding-right: 200px;
 }
 
 .ticketForm{
@@ -84,35 +83,26 @@ nav:nth-child(1) {
     margin-top: 25px;
 }
 
-.domoForm {
-    border: 2px solid #338acc;
-    height: 35px;
-    width: 700px;
-    margin-top:0px;
-    padding-top:10px;
-    background-color: #55acee;
-    border-bottom-right-radius: 4px;
-    border-top-right-radius: 4px;
+.ticketForm label{
+    margin-right: 25px;
 }
 
-.domoForm label {
-    display: inline-block;
-    width: 75px;
-    margin-left: 10px;
-    font-size: 1.2em;
-    float: left;
-    color: white;
+.ticketForm input{
+    margin-right: 25px;
 }
 
-.domoForm input[type=text] {
-    float:left;
+#ticketDueDate, #ticketTitle, #ticketPriority{
+    width: 25%;
+    margin-bottom: 15px;
 }
 
-.makeDomoSubmit {
+#ticketDesc{
+    width: 76.5%;
+}
+
+.makeTicketSubmit {
     transition: background-color 0.4s ease;
-    display: inline;
-    width: 90px;
-    background-color: #00aeff;
+    width: 8%;
     border-radius: 2px;
     color: white;
     text-decoration: none;
