--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,9 +5,10 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <link rel="shortcut icon" href="/assets/img/favicon.png"/>
   <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
+
 </head>
 <body>
-  <nav><a href="/login"><img id="logo" src="/assets/img/logo.png" alt="logo"/></a>
+  <nav><a href="/login"><img id="logo" class="logo" src="/assets/img/logo.png" alt="logo"/></a>
     <div class="navlink"><a href="/login">Login</a></div>
     <div class="navlink"><a href="/signup">Sign up</a></div>
   </nav>
