--- a/hosted/style.css
+++ b/hosted/style.css
@@ -51,13 +51,18 @@ nav:nth-child(1) {
 .ticketContainer{
     display: inline-block;
     width: 17%;
-    height: 725px;
-    margin: 75px 35px 15px 15px;
+    height: 75%;
+    margin: 3% 1% 0.5% 0.5%;
+    text-align: center;
+}
+
+.sortButtons{
+    margin: 10px;
 }
 
 .tickets{
-    width: 350px;
-    height: 675px;
+    width: 100%;
+    height: 100%;
     overflow-y: scroll;
 }
 
@@ -97,7 +102,7 @@ nav:nth-child(1) {
 }
 
 #ticketDesc{
-    width: 76.5%;
+    width: 74%;
 }
 
 .makeTicketSubmit {
