--- a/hosted/style.css
+++ b/hosted/style.css
@@ -113,6 +113,50 @@ nav:nth-child(1) {
     text-decoration: none;
 }
 
+.premium{
+    padding-left: 45%;
+    margin-bottom: 1%;
+}
+
+.premiumCTA{
+    margin-right: 1%;
+}
+
+#boards{
+    text-align: center;
+    margin-top: 6%;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+
+.board{
+    padding-left: 40%;
+}
+.boardButton{
+    height: 5%;
+    margin-right: 1%;
+}
+
+.boardLabel{
+    margin-left: 1%;
+}
+
+.boardFormContainer{
+    margin-top: 5%;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+
+.boardForm{
+    padding-left: 700px;
+}
+
+#boardName{
+    margin-left: 15px;
+    margin-right: 15px;
+    width: 25%;
+}
+
 .makeDomoSubmit:link, .makeDomoSubmit:visited, .makeDomoSubmit:hover, .makeDomoSubmit:active {
     color: white;
 }
