Password change done, board and ticket add/del done, ToDo: Error message, client code, upgrade page, comment and document

--- a/views/appBoards.handlebars
+++ b/views/appBoards.handlebars
@@ -28,7 +28,7 @@
                     <h4 class="boardLabel">Name: {{this.name}}</h4>
                     <div class="boardInfo">
                         {{#if this.tickets}}
-                            <h4 class="boardLabel">Tickets: {{this.tickets}}</h4>
+                            <h4 class="boardLabel">Tickets: {{this.tickets.length}}</h4>
                         {{else}}
                             <h4 class="boardLabel">Tickets: None</h4>
                         {{/if}}
